--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,9 +1,12 @@
 <nav>
   <h1 class="logo">C&B</h1>
   <ul class="directory">
-
+    <li><%= link_to "Home", "#", class: "active", remote: true %></li>
+    <li><%= link_to "About", "#", remote: true %></li>
+    <li><%= link_to "Contact", "#", remote: true %></li>
   </ul>
   <p class="address">
-
+    3442 N Elaine Place</br>
+    Chicago, IL, 60657
   </p>
 </nav>
