--- a/app/assets/stylesheets/global/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/global/foundation_and_overrides.scss
@@ -85,7 +85,7 @@ $column-gutter: 3rem; // Default rem-calc(30)
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 
 // We use these to define default font stacks
-$font-family-sans-serif: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+$font-family-sans-serif: "Panton Light", "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
 $font-family-serif: Georgia, Cambria, "Times New Roman", Times, serif;
 $font-family-monospace: Consolas, "Liberation Mono", Courier, monospace;
 
@@ -124,6 +124,8 @@ $info-color: #a0d3e8;
 // We use these to control various global styles
 $body-bg: $white;
 $body-font-color: $jet;
+$body-font-secondary-color: $aluminum;
+$body-font-ternary-color: $gainsboro;
 $body-font-family: $font-family-sans-serif;
 $body-font-weight: $font-weight-normal;
 $body-font-style: normal;
