Rough work on main content section

--- a/app/assets/stylesheets/global/_variables.scss
+++ b/app/assets/stylesheets/global/_variables.scss
@@ -6,6 +6,13 @@ body {
 }
 
 @font-face {
+  font-family: 'Weather Icons';
+  src: font-url('fonts/weather/WeatherIcons-Regular.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
   font-family: 'Panton Light';
   src: font-url('fonts/panton/panton.light.otf') format('opentype');
   font-weight: normal;
