--- a/app/assets/stylesheets/global/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/global/foundation_and_overrides.scss
@@ -79,7 +79,7 @@ $include-xl-html-grid-classes: false;
 
 $row-width: 140rem; // Default rem-calc(1400)
 $total-columns: 12;
-$column-gutter: 3rem; // Default rem-calc(30)
+$column-gutter: 0; // Default rem-calc(30)
 
 // c. Global
 // - - - - - - - - - - - - - - - - - - - - - - - - -
