--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,9 +4,12 @@
 @import "global/foundation_and_overrides";
 @import "global/foundation";
 
+@import "fonts/weather/weather";
+
 // Modules
 
 @import "modules/navbar";
+@import "modules/tile";
 
 // Components
 
