--- a/app/assets/stylesheets/modules/_navbar.scss
+++ b/app/assets/stylesheets/modules/_navbar.scss
@@ -1,15 +1,22 @@
 $nav-font-color: $body-font-secondary-color;
 $nav-font-active-color: $body-font-color;
 $nav-font-hover-color: $body-font-ternary-color;
+$nav-mobile-height: 6rem;
 
 nav {
+  border-bottom: 1px solid $nav-font-hover-color;
   background-color: $body-bg;
-  border-right: 1px solid $body-font-color;
-  height: 10%;
-  padding: 1rem;
+  height: $nav-mobile-height;
+  padding: 0 0.5rem;
   position: relative;
   width: 100%;
   .logo {
+    font-size: $nav-mobile-height;
+    line-height: 1;
+    vertical-align: top;
+  }
+  .menu-button {
+    float: right;
   }
   .directory {
     list-style-type: none;
@@ -30,25 +37,31 @@ nav {
     }
   }
   .address {
-
+    display: none;
   }
 }
 
 @media #{$large-up} {
   nav {
+    border-bottom: 0;
+    border-right: 1px solid $nav-font-color;
     height: 100%;
+    padding: 1rem;
     width: 20%;
     .logo {
       display: block;
       font-size: 8rem;
-      margin: 0rem auto 10rem auto;
+      margin: 0rem auto 6rem auto;
       text-align: center;
     }
+    .menu-button { display: none; }
     .directory {
+      margin-bottom: 6rem;
       position: static;
     }
     .address {
       bottom: 0;
+      display: block;
       left: 0;
       position: absolute;
       text-align: center;
