--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,7 +7,8 @@
     <li><%= link_to "Contact", "#", remote: true %></li>
   </ul>
   <p class="address">
-    3442 N Elaine Place</br>
-    Chicago, IL, 60657
+    Crook & Baker Digital</br>
+    3442 N Elaine Pl Apt 3R</br>
+    Chicago IL 60657
   </p>
 </nav>
