--- a/app/views/shared/_tile.html.erb
+++ b/app/views/shared/_tile.html.erb
@@ -1,5 +1,4 @@
-<main>
-  <div class="inner">
-    <%= yield %>
-  </div>
-<main>
+<div class="background"></div>
+<main class="content">
+  <%= yield %>
+</main>
