Formatting in the menu

--- a/app/assets/stylesheets/modules/_tile.scss
+++ b/app/assets/stylesheets/modules/_tile.scss
@@ -2,7 +2,7 @@
   background-image: image-url('chicagoSkyline.jpg');
   background-position: 50% 70%;
   background-size: cover;
-  filter: grayscale(60%);
+  filter: grayscale(60%) brightness(0.6);
   height: 100%;
   left: 0;
   position: absolute;
