--- a/app/assets/stylesheets/modules/_navbar.scss
+++ b/app/assets/stylesheets/modules/_navbar.scss
@@ -2,6 +2,7 @@ $nav-font-color: $body-font-secondary-color;
 $nav-font-active-color: $body-font-color;
 $nav-font-hover-color: $body-font-ternary-color;
 $nav-mobile-height: 6rem;
+$nav-padding: 3rem;
 
 nav {
   border-bottom: 1px solid $nav-font-hover-color;
@@ -46,26 +47,29 @@ nav {
     border-bottom: 0;
     border-right: 1px solid $nav-font-color;
     height: 100%;
-    padding: 1rem;
+    padding: $nav-padding;
     width: 20%;
     .logo {
       display: block;
       font-size: 8rem;
-      margin: 0rem auto 6rem auto;
+      margin: 0rem auto 15rem auto;
       text-align: center;
     }
     .menu-button { display: none; }
     .directory {
       margin-bottom: 6rem;
       position: static;
-    }
+      li { text-align: right; }
+     }
     .address {
-      bottom: 0;
+      bottom: $nav-padding;
       display: block;
-      left: 0;
+      font-size: 1.4rem;
+      left: $nav-padding;
+      margin: 0;
       position: absolute;
-      text-align: center;
-      width: 100%;
+      text-align: left;
+      width: 80%;
     }
   }
 }
