--- a/app/assets/stylesheets/modules/_navbar.scss
+++ b/app/assets/stylesheets/modules/_navbar.scss
@@ -13,6 +13,7 @@ nav {
   position: relative;
   width: 100%;
   .logo {
+    display: inline-block;
     font-size: $nav-mobile-height;
     line-height: 1;
     vertical-align: top;
@@ -65,7 +66,7 @@ nav {
     .address {
       bottom: $nav-offset-padding;
       display: block;
-      font-size: 1.4rem;
+      font-size: 1.2rem;
       left: $nav-padding;
       margin: 0;
       position: absolute;
