--- a/app/assets/stylesheets/modules/_tile.scss
+++ b/app/assets/stylesheets/modules/_tile.scss
@@ -1,8 +1,8 @@
 .background {
-  background-image: image-url('chicagoSkyline.jpg');
-  background-position: 50% 70%;
+  background-image: image-url('SkylineBlack.jpg');
+  background-position: 50% 50%;
   background-size: cover;
-  filter: grayscale(60%) brightness(0.6);
+  // filter: grayscale(60%) brightness(0.6);
   height: 100%;
   left: 0;
   position: absolute;
