--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,7 @@
 <nav>
-  <h1 class="logo">C&B</h1>
+  <h1 class="logo">
+    C&B
+  </h1>
   <button class="menu-button"></button>
   <ul class="directory">
     <li><%= link_to "Home", "#", class: "active", remote: true %></li>
