--- a/app/assets/stylesheets/global/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/global/foundation_and_overrides.scss
@@ -115,7 +115,7 @@ $black       : #000000;
 
 // We use these as default colors throughout
 // $primary-color: #008CBA;
-$primary-color: #2CFFFE;
+$primary-color: #35D6CE;
 $secondary-color: #e7e7e7;
 $alert-color: #f04124;
 $success-color: #43AC6A;
