Update mobile font size

--- a/app/assets/stylesheets/global/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/global/foundation_and_overrides.scss
@@ -126,7 +126,7 @@ $info-color: #a0d3e8;
 $body-bg: $white;
 $body-font-color: $jet;
 $body-font-secondary-color: $aluminum;
-$body-font-ternary-color: $base;
+$body-font-ternary-color: $gainsboro;
 $body-font-family: $font-family-sans-serif;
 $body-font-weight: $font-weight-normal;
 $body-font-style: normal;
