--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,9 +4,11 @@
   </h1>
   <button class="menu-button"></button>
   <ul class="directory">
-    <li><%= link_to "Home", "#", class: "active", remote: true %></li>
-    <li><%= link_to "About", "#", remote: true %></li>
-    <li><%= link_to "Contact", "#", remote: true %></li>
+    <li><%= link_to "Home", "#", class: "active" %></li>
+    <li><%= link_to "About", "#" %></li>
+    <li><%= link_to "Services", "#" %></li>
+    <li><%= link_to "Contact", "#" %></li>
+    <li><%= link_to "Thoughts", "#" %></li>
   </ul>
   <p class="address">
     Crook & Baker Digital</br>
