--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,7 +12,7 @@
   </ul>
   <p class="address">
     Crook & Baker Digital</br>
-    3442 N Elaine Pl Apt 3R</br>
-    Chicago IL 60657
+    530 N Lake Shore Dr</br>
+    Chicago IL 60611
   </p>
 </nav>
