Change background image and add center banner text

--- a/app/assets/stylesheets/modules/_tile.scss
+++ b/app/assets/stylesheets/modules/_tile.scss
@@ -1,6 +1,6 @@
 .background {
-  background-image: image-url('SkylineBlack.jpg');
-  background-position: center top;
+  background-image: image-url('SkylineBlack2.jpg');
+  background-position: center 25%;
   background-size: cover;
   height: 100%;
   left: 0;
