--- a/app/views/main_pages/home.html.erb
+++ b/app/views/main_pages/home.html.erb
@@ -5,4 +5,9 @@
     <span class="small-text">and Baker</span>
   </p>
   <p class="agency">Digital Consulting</p>
+  <%= link_to "#", class: "btn-services" do %>
+    <div class="bookstop right"></div>
+    <div class="bookstop left"></div>
+    <span class="content-btn">Our Services</span>
+  <% end %>
 </div>
