Change bracket buttons to mixin

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,12 +6,14 @@
 
 @import "fonts/weather/weather";
 
+// Components
+
+@import "components/buttons";
+
 // Modules
 
 @import "modules/navbar";
 @import "modules/tile";
-
-// Components
 
 // Pages
 
