--- a/app/views/main_pages/home.html.erb
+++ b/app/views/main_pages/home.html.erb
@@ -5,9 +5,5 @@
     <span class="small-text">and Baker</span>
   </p>
   <p class="agency">Digital Consulting</p>
-  <%= link_to "#", class: "btn-services" do %>
-    <div class="bookstop right"></div>
-    <div class="bookstop left"></div>
-    <span class="content-btn">Our Services</span>
-  <% end %>
+  <%= link_to "Our Services", "#", class: "btn-services" %>
 </div>
