--- a/app/assets/stylesheets/modules/_navbar.scss
+++ b/app/assets/stylesheets/modules/_navbar.scss
@@ -14,11 +14,8 @@ nav {
   position: relative;
   width: 100%;
   .logo {
+    @include btn-bracket-side($nav-font-active-color, $nav-font-hover-color, 0.8 * $nav-mobile-height, 2px, 0.3s);
     display: inline-block;
-    font-size: 0.8 * $nav-mobile-height;
-    line-height: 1;
-    padding-top: 0.5rem;
-    vertical-align: 0.1 * $nav-mobile-height;
   }
   .menu-button {
     float: right;
@@ -53,11 +50,14 @@ nav {
     height: 100%;
     padding: $nav-offset-padding 0;
     width: 20%;
-    .logo {
-      display: block;
-      font-size: 4rem;
-      margin: 0rem auto 15rem auto;
+    .logo-container {
+      margin-bottom: 10rem;
       text-align: center;
+      .logo {
+        @include btn-bracket-side($nav-font-active-color, $nav-font-hover-color, 4rem, 2px, 0.3s);
+        display: inline-block;
+        line-height: 1.2
+      }
     }
     .menu-button { display: none; }
     .directory {
