--- a/app/assets/stylesheets/modules/_tile.scss
+++ b/app/assets/stylesheets/modules/_tile.scss
@@ -2,6 +2,7 @@
   background-image: image-url('SkylineBlack2.jpg');
   background-position: center 25%;
   background-size: cover;
+  filter: brightness(0.8);
   height: 100%;
   left: 0;
   position: absolute;
