--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,9 @@
 <nav>
-  <h1 class="logo">
-    [c&b]
-  </h1>
+  <div class="logo-container">
+    <%= link_to "#" do %>
+      <h1 class="logo">C&B</h1>
+    <% end %>
+  </div>
   <button class="menu-button"></button>
   <ul class="directory">
     <li><%= link_to "Home", "#", class: "active" %></li>
