--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,7 +4,11 @@
       <h1 class="logo">C&B</h1>
     <% end %>
   </div>
-  <button class="menu-button"></button>
+  <button class="menu-button">
+    <span class="bar top"></span>
+    <span class="bar middle"></span>
+    <span class="bar bottom"></span>
+  </button>
   <ul class="directory">
     <li><%= link_to "Home", "#", class: "active" %></li>
     <li><%= link_to "About", "#" %></li>
