--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -1,7 +1,29 @@
+@mixin btn-three-bars {
+  background-color: transparent;
+  outline: 0;
+  position: relative;
+  .bar {
+    background-color: $primary-color;
+    border-radius: 1px;
+    height: 0.6rem;
+    left: 0;
+    position: absolute;
+    width: 100%;
+    &.top { top: 0; }
+    &.middle {
+      margin-top: -3px;
+      top: 50%;
+    }
+    &.bottom { bottom: 0; }
+  }
+}
+
 @mixin btn-bracket-side($passive-color, $active-color, $font-size, $border-width, $speed) {
+  border-radius: 1px;
   font-size: $font-size;
   line-height: 1;
   opacity: 0.99;
+  outline: 0;
   padding: 0 1rem;
   position: relative;
   transition: all 0.5s;
