--- a/app/assets/stylesheets/modules/_navbar.scss
+++ b/app/assets/stylesheets/modules/_navbar.scss
@@ -10,15 +10,23 @@ nav {
   border-bottom: 1px solid $nav-font-passive-color;
   background-color: rgba(255,255,255,0.97);
   height: $nav-mobile-height;
-  padding: 0 0.5rem;
+  padding: 0.4rem 0.5rem;
   position: relative;
   width: 100%;
-  .logo {
-    @include btn-bracket-side($nav-font-active-color, $nav-font-hover-color, 0.8 * $nav-mobile-height, 2px, 0.3s);
+  .logo-container {
     display: inline-block;
+    .logo {
+      @include btn-bracket-side($nav-font-active-color, $nav-font-hover-color, 0.8 * $nav-mobile-height, 2px, 0.3s);
+      display: inline-block;
+    }
   }
   .menu-button {
+    @include btn-three-bars;
+    $button-dimension: $nav-mobile-height - 2rem;
     float: right;
+    height: $button-dimension;
+    margin: 0.6rem 0.5rem 0 0;
+    width: $button-dimension;
   }
   .directory {
     list-style-type: none;
@@ -51,6 +59,7 @@ nav {
     padding: $nav-offset-padding 0;
     width: 20%;
     .logo-container {
+      display: block;
       margin-bottom: 10rem;
       text-align: center;
       .logo {
