--- a/app/assets/stylesheets/pages/main_pages/_home.scss
+++ b/app/assets/stylesheets/pages/main_pages/_home.scss
@@ -1,13 +1,13 @@
 .company-heading {
-  height: 18rem;
-  margin-top: -9rem;
+  height: 13rem;
+  margin-top: -6.5rem;
   position: absolute;
   text-align: center;
-  top: 40%;
+  top: 30%;
   width: 100%;
   .logo {
     display: inline-block;
-    font-size: 12rem;
+    font-size: 6rem;
     line-height: 1;
     margin: 0;
     vertical-align: top;
@@ -16,16 +16,64 @@
     display: inline-block;
     line-height: 1;
     margin: 0;
-    .large-text { font-size: 7rem; }
-    .small-text { font-size: 5rem; }
+    .large-text { font-size: 3.5rem; }
+    .small-text { font-size: 2.5rem; }
   }
   .agency {
-    font-size: 6rem;
+    font-size: 3rem;
     line-height: 1;
-    margin-left: 4rem;
+    margin-left: 2rem;
   }
   .btn-services {
-    @include btn-bracket-side($primary-color, $white, 4rem, 2px, 0.5s);
-    margin-top: 4rem;
+    @include btn-bracket-side($primary-color, $white, 2.5rem, 2px, 0.5s);
+    margin-top: 2.5rem;
+  }
+}
+
+@media #{$medium-up} {
+  .company-heading {
+    height: 18rem;
+    margin-top: -9rem;
+    top: 40%;
+    .logo {
+      font-size: 12rem;
+    }
+    .name {
+      display: inline-block;
+      .large-text { font-size: 7rem; }
+      .small-text { font-size: 5rem; }
+    }
+    .agency {
+      font-size: 6rem;
+      margin-left: 4rem;
+    }
+    .btn-services {
+      @include btn-bracket-side($primary-color, $white, 4rem, 2px, 0.5s);
+      margin-top: 4rem;
+    }
+  }
+}
+
+@media #{$large-up} {
+  .company-heading {
+    height: 18rem;
+    margin-top: -9rem;
+    top: 40%;
+    .logo {
+      font-size: 12rem;
+    }
+    .name {
+      display: inline-block;
+      .large-text { font-size: 7rem; }
+      .small-text { font-size: 5rem; }
+    }
+    .agency {
+      font-size: 6rem;
+      margin-left: 4rem;
+    }
+    .btn-services {
+      @include btn-bracket-side($primary-color, $white, 4rem, 2px, 0.5s);
+      margin-top: 4rem;
+    }
   }
 }
