--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,6 +2,7 @@
   <div class="logo-container">
     <%= link_to "#" do %>
       <h1 class="logo">C&B</h1>
+      <div class="logo-mobile"></div>
     <% end %>
   </div>
   <button class="menu-button">
