--- a/app/assets/stylesheets/modules/_navbar.scss
+++ b/app/assets/stylesheets/modules/_navbar.scss
@@ -10,14 +10,23 @@ nav {
   border-bottom: 1px solid $nav-font-passive-color;
   background-color: rgba(255,255,255,0.97);
   height: $nav-mobile-height;
-  padding: 0.4rem 0.5rem;
+  padding: 0.8rem;
   position: relative;
   width: 100%;
   .logo-container {
     display: inline-block;
     .logo {
       @include btn-bracket-side($nav-font-active-color, $nav-font-hover-color, 0.8 * $nav-mobile-height, 2px, 0.3s);
-      display: inline-block;
+      display: none;
+    }
+    .logo-mobile {
+      $logo-dimension: $nav-mobile-height - 1.6rem;
+      background-color: $primary-color;
+      border: 2px solid $white;
+      border-radius: 1px;
+      box-shadow: 0 0 0 2px $primary-color;
+      height: $logo-dimension;
+      width: $logo-dimension;
     }
   }
   .menu-button {
@@ -25,7 +34,7 @@ nav {
     $button-dimension: $nav-mobile-height - 2rem;
     float: right;
     height: $button-dimension;
-    margin: 0.6rem 0.5rem 0 0;
+    margin-top: 0.2rem;
     width: $button-dimension;
   }
   .directory {
@@ -67,6 +76,7 @@ nav {
         display: inline-block;
         line-height: 1.2
       }
+      .logo-mobile { display: none; }
     }
     .menu-button { display: none; }
     .directory {
