hide menu on mobile

--- a/app/assets/stylesheets/modules/_navbar.scss
+++ b/app/assets/stylesheets/modules/_navbar.scss
@@ -38,6 +38,7 @@ nav {
     width: $button-dimension;
   }
   .directory {
+    display: none;
     list-style-type: none;
     margin: 0;
     position: absolute;
