--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -3,7 +3,7 @@
   outline: 0;
   position: relative;
   .bar {
-    background-color: $body-font-color;
+    background-color: $body-font-secondary-color;
     border-radius: 1px;
     height: 0.6rem;
     left: 0;
