Add menu back to desktop

--- a/app/assets/stylesheets/modules/_navbar.scss
+++ b/app/assets/stylesheets/modules/_navbar.scss
@@ -81,6 +81,7 @@ nav {
     }
     .menu-button { display: none; }
     .directory {
+      display: block;
       margin-bottom: 6rem;
       padding-right: $nav-padding;
       position: static;
