--- a/app/views/main_pages/home.html.erb
+++ b/app/views/main_pages/home.html.erb
@@ -4,6 +4,6 @@
     <span class="large-text">Crook</span><br>
     <span class="small-text">and Baker</span>
   </p>
-  <p class="agency">Digital Consulting</p>
+  <p class="agency">Generic Consulting</p>
   <%= link_to "Our Services", "#", class: "btn-services" %>
 </div>
