--- a/app/assets/stylesheets/modules/_navbar.scss
+++ b/app/assets/stylesheets/modules/_navbar.scss
@@ -10,23 +10,14 @@ nav {
   border-bottom: 1px solid $nav-font-passive-color;
   background-color: rgba(255,255,255,0.97);
   height: $nav-mobile-height;
-  padding: 0.8rem;
+  padding: 0.4rem 0.8rem;
   position: relative;
   width: 100%;
   .logo-container {
     display: inline-block;
     .logo {
       @include btn-bracket-side($nav-font-active-color, $nav-font-hover-color, 0.8 * $nav-mobile-height, 2px, 0.3s);
-      display: none;
-    }
-    .logo-mobile {
-      $logo-dimension: $nav-mobile-height - 1.6rem;
-      background-color: $primary-color;
-      border: 2px solid $white;
-      border-radius: 1px;
-      box-shadow: 0 0 0 2px $primary-color;
-      height: $logo-dimension;
-      width: $logo-dimension;
+      display: inline-block;
     }
   }
   .menu-button {
@@ -34,7 +25,7 @@ nav {
     $button-dimension: $nav-mobile-height - 2rem;
     float: right;
     height: $button-dimension;
-    margin-top: 0.2rem;
+    margin-top: 0.5rem;
     width: $button-dimension;
   }
   .directory {
@@ -72,10 +63,12 @@ nav {
       display: block;
       margin-bottom: 15rem;
       text-align: center;
-      .logo-mobile {
-        display: block;
-        margin: 0 auto;
+      .logo {
+        @include btn-bracket-side($nav-font-active-color, $nav-font-hover-color, 4rem, 2px, 0.3s);
+        display: inline-block;
+        line-height: 1.2
       }
+      .logo-mobile { display: none; }
     }
     .menu-button { display: none; }
     .directory {
