--- a/app/assets/stylesheets/modules/_navbar.scss
+++ b/app/assets/stylesheets/modules/_navbar.scss
@@ -27,15 +27,19 @@ nav {
     height: $button-dimension;
     margin-top: 0.5rem;
     width: $button-dimension;
+    &:hover { .bar { background-color: $primary-color; } }
   }
   .directory {
+    background-color: $white;
     display: none;
+    left: 0;
     list-style-type: none;
     margin: 0;
+    padding: 15rem 0;
     position: absolute;
-    right: -1000rem;
-    top: 0;
+    top: $nav-mobile-height;
     width: 100%;
+    z-index: 50;
     li {
       display: block;
       text-align: center;
@@ -74,6 +78,7 @@ nav {
     .directory {
       display: block;
       margin-bottom: 6rem;
+      padding: 0;
       padding-right: $nav-padding;
       position: static;
       li { text-align: right; }
