--- a/app/views/layouts/allstaff.html.erb
+++ b/app/views/layouts/allstaff.html.erb
@@ -6,7 +6,7 @@
     <title><%= content_for?(:title) ? "#{yield(:title)} | Allstaff" : "Allstaff" %></title>
     <%= stylesheet_link_tag    "allstaff" %>
     <%= javascript_include_tag "vendor/modernizr" %>
-    <%= javascript_include_tag "application", 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag "allstaff", 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
   </head>
 
