--- a/app/views/allstaff/_company_tile.html.erb
+++ b/app/views/allstaff/_company_tile.html.erb
@@ -1,3 +1,3 @@
-<div class="company">
-  <%= staffer %>
+<div class="company <%= index == 4 ? 'major' : 'minor' %>">
+  <%= image_tag "logos/#{company.gsub " ", ""}.png" %>
 </div>
