Add color blurbs to companies

--- a/app/assets/stylesheets/allstaff/global/_variables.scss
+++ b/app/assets/stylesheets/allstaff/global/_variables.scss
@@ -4,7 +4,8 @@ $all-red: #B32229;
 $all-orange: #DB482E;
 $all-green: #1B4C26;
 $all-light-blue: #2F5EA7;
-$all-dark-blue: #26357A;
+$all-pale-blue: #26357A;
+$all-dark-blue: #022284;
 $all-purple: #4D318D;
 
 
