Add colors to grid

--- a/app/views/allstaff/_company_tile.html.erb
+++ b/app/views/allstaff/_company_tile.html.erb
@@ -1,4 +1,4 @@
-<div class="company <%= index == 4 ? 'major' : 'minor' %>">
+<div class="company <%= index == 4 ? 'major' : 'minor' %>" style="background-color: <%= company[1] %>;" >
   <span class="highlight" style="background-color: <%= company[1] %>;"></span>
   <%= image_tag "logos/#{company[0].gsub " ", ""}.png" %>
 </div>
