--- a/app/assets/stylesheets/allstaff/pages/_home.scss
+++ b/app/assets/stylesheets/allstaff/pages/_home.scss
@@ -3,7 +3,7 @@
     @include grid-row();
     .company {
       background-color: $gainsboro;
-      border: 1px solid white;
+      // border: 1px solid white;
       position: relative;
       height: 100px;
       .highlight {
