Moving onto a dashboard

--- a/app/assets/stylesheets/allstaff/global/_variables.scss
+++ b/app/assets/stylesheets/allstaff/global/_variables.scss
@@ -8,4 +8,16 @@ $all-pale-blue: #26357A;
 $all-dark-blue: #022284;
 $all-purple: #4D318D;
 
+$office-1: #251E1B;
+$office-2: #56555B;
+$office-3: #818782;
+$office-4: #C4C2C3;
+$office-5: #A69A80;
+
+$cool-1: #293249;
+$cool-2: #69656F;
+$cool-3: #ACA1A1;
+$cool-4: #DED2CF;
+$cool-5: #F7EFED;
+
 
