--- a/app/assets/stylesheets/allstaff/pages/_home.scss
+++ b/app/assets/stylesheets/allstaff/pages/_home.scss
@@ -2,17 +2,10 @@
   .layer {
     @include grid-row();
     .company {
-      background-color: $gainsboro;
-      // border: 1px solid white;
+      background-color: white;
+      border: 20px solid transparent;
+      overflow: hidden;
       position: relative;
-      height: 100px;
-      .highlight {
-        height: 3rem;
-        position: absolute;
-        right: 0;
-        top: 0;
-        width: 3rem;
-      }
       img {
         display: block;
         left: 50%;
@@ -21,13 +14,34 @@
         position: absolute;
         top: 50%;
       }
+      .description {
+        background-color: $gainsboro;
+        color: white;
+        cursor: pointer;
+        height: 100%;
+        left: 0;
+        overflow: hidden;
+        position: absolute;
+        transition: all 0.5s;
+        top: -100%;
+        width: 100%;
+        img {
+          display: block;
+          margin: 0 auto;
+          width: 60%;
+        }
+      }
+      &:hover {
+        .description {
+          top: 0;
+        }
+      }
       &.minor {
         @include grid-column(3);
       }
       &.major {
         @include grid-column(9);
-
-        background-color: red;
+        .description { display: none; }
       }
     }
   }
