--- a/app/views/layouts/allstaff.html.erb
+++ b/app/views/layouts/allstaff.html.erb
@@ -7,6 +7,7 @@
     <%= stylesheet_link_tag    "allstaff" %>
     <%= javascript_include_tag "vendor/modernizr" %>
     <%= javascript_include_tag "allstaff", 'data-turbolinks-track' => true %>
+    <%= favicon_link_tag 'Logo.png' %>
     <%= csrf_meta_tags %>
   </head>
 
