--- a/app/views/allstaff/home.html.erb
+++ b/app/views/allstaff/home.html.erb
@@ -1,6 +1,10 @@
 <main class="content" id="container-companies">
   <div class="layer">
-    <% for i in 0..3 do %>
+    <%= render partial: "allstaff_tile", locals: { company: @companies[0]} %>
+    <%= render partial: "company_tile", locals: { company: @companies[1], index: 1 } %>
+  </div>
+  <div class="layer">
+    <% for i in 2..3 do %>
       <%= render partial: "company_tile", locals: { company: @companies[i], index: i } %>
     <% end %>
   </div>
@@ -10,7 +14,12 @@
     <% end %>
   </div>
   <div class="layer">
-    <% for i in 6..9 do %>
+    <% for i in 6..7 do %>
+      <%= render partial: "company_tile", locals: { company: @companies[i], index: i } %>
+    <% end %>
+  </div>
+  <div class="layer">
+    <% for i in 8..9 do %>
       <%= render partial: "company_tile", locals: { company: @companies[i], index: i } %>
     <% end %>
   </div>
