Add logos instead of text to descriptions

--- a/app/views/allstaff/_company_tile.html.erb
+++ b/app/views/allstaff/_company_tile.html.erb
@@ -3,6 +3,6 @@
     <%= image_tag "checkerboard/test#{index}.jpg" %>
   </div>
   <div class="description">
-    <%= company[1] %>
+    <%= image_tag "logos/#{company[0].gsub " ", ""}.png" %>
   </div>
 </div>
