--- a/app/assets/stylesheets/allstaff/pages/_home.scss
+++ b/app/assets/stylesheets/allstaff/pages/_home.scss
@@ -34,6 +34,14 @@
         left: 0;
         line-height: 1.2;
         padding: 2rem;
+        img {
+          display: block;
+          left: 50%;
+          margin: 0;
+          max-width: 90%;
+          position: absolute;
+          top: 50%;
+        }
         &:after{
           content: '';
           position: absolute;
