--- a/app/views/allstaff/select.html.erb
+++ b/app/views/allstaff/select.html.erb
@@ -1,2 +1,3 @@
-<h1>Allstaff#select</h1>
-<p>Find me in app/views/allstaff/select.html.erb</p>
+<%= render partial: "allstaff/shared/header" %>
+
+<%= render partial: "allstaff/shared/footer" %>
