--- a/app/assets/stylesheets/allstaff/pages/_home.scss
+++ b/app/assets/stylesheets/allstaff/pages/_home.scss
@@ -1,16 +1,14 @@
 #container-companies {
   .layer {
     @include grid-row();
-    .logo, .company {
+    .company {
       @include grid-column(6);
 
       border: 5px solid $gainsboro;
       border-collapse: collapse;
       overflow: hidden;
       position: relative;
-    }
-    .company {
-      .image, .description {
+      .image, .brand, .description {
         height: 100%;
         position: absolute;
         top: 0;
@@ -29,16 +27,18 @@
           width: 100%;
         }
       }
-      .description {
+      .brand {
+        background-color: white;
         font-size: 1.5rem;
         left: 0;
         line-height: 1.2;
         padding: 2rem;
+        transition: 0.3s all;
         img {
+          cursor: pointer;
           display: block;
           left: 50%;
           margin: 0;
-          max-width: 90%;
           position: absolute;
           top: 50%;
         }
@@ -55,13 +55,36 @@
           clear: both;
         }
       }
+      .description {
+        background-color: white;
+        font-size: 1.4rem;
+        left: 0;
+        overflow-y: auto;
+        padding: 3rem;
+        text-align: center;
+        transition: all 0.3s;
+      }
+      &.main {
+        img {
+          right: 5%;
+          position: absolute;
+          bottom: 25%;
+          width: 90%;
+        }
+      }
+      &:hover {
+        .brand {
+          border: 2rem solid black;
+        }
+        .description { left: 50%; }
+      }
     }
     &:nth-child(odd) {
       .company {
         .image {
           left: 0;
         }
-        .description {
+        .brand {
           left: 50%;
           &:after{
             content: '';
@@ -76,6 +99,12 @@
             border-top: 20px solid transparent;
             clear: both;
           }
+        }
+        .description {
+          left: 50%;
+        }
+        &:hover {
+          .description { left: 0; }
         }
       }
     }
