--- a/app/views/allstaff/_company_tile.html.erb
+++ b/app/views/allstaff/_company_tile.html.erb
@@ -3,6 +3,11 @@
     <%= image_tag "checkerboard/test#{index}.jpg" %>
   </div>
   <div class="description">
-    <%= image_tag "logos/#{company[0].gsub " ", ""}.png" %>
+    <%= company[1] %>
+  </div>
+  <div class="brand" style="border-color: <%= company[2] %>">
+    <%= link_to allstaff_select_path do %>
+      <%= image_tag "logos/#{company[0].gsub " ", ""}.png" %>
+    <% end %>
   </div>
 </div>
