Change font weight on home page

--- a/app/views/allstaff/shared/_header.html.erb
+++ b/app/views/allstaff/shared/_header.html.erb
@@ -13,7 +13,7 @@
         <a href="#">Looking For Work?</a>
       </li>
       <li>
-        <a href="#">Need Recruitment?</a>
+        <a href="#">Looking To Hire?</a>
       </li>
       <li>
         <a href="#">Recruiters' Blog</a>
