--- a/app/assets/stylesheets/allstaff/pages/_home.scss
+++ b/app/assets/stylesheets/allstaff/pages/_home.scss
@@ -58,6 +58,7 @@
       .description {
         background-color: white;
         font-size: 1.4rem;
+        font-weight: lighter;
         left: 0;
         overflow-y: auto;
         padding: 3rem;
