Make good footer

--- a/app/views/allstaff/select.html.erb
+++ b/app/views/allstaff/select.html.erb
@@ -1,3 +1,7 @@
 <%= render partial: "allstaff/shared/header" %>
 
+<main class="content" id="content-select">
+
+</main>
+
 <%= render partial: "allstaff/shared/footer" %>
