--- a/app/views/allstaff/shared/_footer.html.erb
+++ b/app/views/allstaff/shared/_footer.html.erb
@@ -1,6 +1,14 @@
 <section class="footer">
   <div class="contact">
-
+    <%= link_to "Contact Us", "" %>
   </div>
-
+  <div class="companies">
+    <%= link_to "Our Offices", "" %>
+  </div>
+  <div class="brand">
+    <%= link_to allstaff_home_path do %>
+      <%= image_tag "logos/AllstaffSymbol.png" %>
+      An AllStaff Company
+    <% end %>
+  </div>
 </section>
