Create grid layout for select

--- a/app/assets/stylesheets/global/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/global/foundation_and_overrides.scss
@@ -123,7 +123,7 @@ $warning-color: #f08a24;
 $info-color: #a0d3e8;
 
 // We use these to control various global styles
-$body-bg: $white;
+$body-bg: $ghost;
 $body-font-color: $jet;
 $body-font-secondary-color: $aluminum;
 $body-font-ternary-color: $gainsboro;
