--- a/app/views/allstaff/select.html.erb
+++ b/app/views/allstaff/select.html.erb
@@ -1,7 +1,18 @@
 <%= render partial: "allstaff/shared/header" %>
 
 <main class="content" id="content-select">
+  <div class="blog">
+    <h2>Today's Thoughts</h2>
+    <div class="board">
 
+    </div>
+  </div>
+  <div class="jobs">
+    <h2>Featured Jobs</h2>
+    <ul class="board">
+
+    </ul>
+  </div>
 </main>
 
 <%= render partial: "allstaff/shared/footer" %>
