--- a/app/assets/stylesheets/allstaff/modules/_footer.scss
+++ b/app/assets/stylesheets/allstaff/modules/_footer.scss
@@ -1,4 +1,5 @@
 .footer {
+  background-color: white;
   border-top: 1px solid $iron;
   bottom: 0;
   color: $oil;
@@ -7,7 +8,6 @@
   height: 8rem;
   left: 0;
   padding: 0 2rem;
-  position: fixed;
   width: 100%;
   .contact, .companies, .brand {
     display: inline-block;
