Style changes to header and footer

--- a/app/assets/stylesheets/allstaff/modules/_header.scss
+++ b/app/assets/stylesheets/allstaff/modules/_header.scss
@@ -4,4 +4,15 @@ nav {
     margin-top: 1rem;
     vertical-align: top;
   }
+  section {
+    ul {
+      li {
+        a {
+          &:hover {
+            color: $iron;
+          }
+        }
+      }
+    }
+  }
 }
