--- a/app/views/allstaff/portal.html.erb
+++ b/app/views/allstaff/portal.html.erb
@@ -1,2 +1,7 @@
-<h1>Allstaff#portal</h1>
-<p>Find me in app/views/allstaff/portal.html.erb</p>
+<%= render partial: "allstaff/shared/header" %>
+
+<main class="content" id="content-portal">
+
+</main>
+
+<%= render partial: "allstaff/shared/footer" %>
