--- a/app/views/allstaff/select.html.erb
+++ b/app/views/allstaff/select.html.erb
@@ -4,7 +4,35 @@
   <div class="blog">
     <h2>Today's Thoughts</h2>
     <div class="board">
-
+      <h3>5 WAYS TO BUILD RAPPORT WITH YOUR INTERVIEWER</h3>
+      <br>
+      Job interviews are stressful. But don’t let your nerves get the better of you. What follows are five tips that will help you put your best foot forward in the interview.
+      <br><br>
+      <h4>1. Make small talk.</h4>
+      <br>
+      First, tell the hiring manager that’s it’s a pleasure to meet him or her and that you’re excited about the job opportunity. If the hiring manager doesn’t launch directly into interview mode, feel free to ask a quick question to show your interest by asking something like, “how long have you worked for the company?”
+      <br><br>
+      <h4>2. Engage.</h4>
+      <br>
+      The best interviews are those that are not completely one-sided. You want a back and forth in which you ask questions as well as answer them. If you need to write down a reminder on your notepad as the interviewer is talking, that’s fine. Another way to demonstrate your interest is to refer back to something that was said earlier.
+      <br><br>
+      <h4>3. Inject your personality.</h4>
+      <br>
+      Show your sense of humor, and let the hiring manager see your smile or hear your laugh. These are positive gestures that can enhance rapport between you. Don’t resort to jokes to show your humor, but if there is a place in the conversation where it feels appropriate to say something funny and politically correct, don’t hold back.
+      <br><br>
+      <h4>4. Ask questions.</h4>
+      <br>
+      While you should interact with the interviewer throughout the conversation, you absolutely must ask at least one question at the end. During the interview, ask for clarification on things you’ don’t understand. This is not a mark against you, but rather shows the hiring manager that you’re listening. Asking follow-up questions during and at the end of the interview accomplishes both of these things. Make sure that when you walk out the door you understand what the job entails.
+      <br><br>
+      <h4>5. Show gratitude.</h4>
+      <br>
+      Tell the interviewer how much you’ve enjoyed the conversation and that you hope to hear from him or her soon. Be sure to ask for a business card or email address if you don’t already have it. Write a thank you email, and send a handwritten thank you note in the mail the following day. Mention something from your conversation that sparked further interest in joining the company.
+      <br><br>
+      The interview is your chance to show your personality, which is something that cannot be gleaned from a written job application. Establishing good rapport with your interviewer will help you feel at ease during the interview and increase the likelihood that you will be invited back for a second round of interviews.
+      <br><br>
+      <h4>About Select Staffing</h4>
+      <br>
+      At Select Staffing, we work hard to provide you with the best employment opportunities available. We have extensive knowledge and established relationships with the top employers in the Chicago area. Whether you are seeking a temporary job or a permanent position, Select Staffing can help you get situated in a job that’s uniquely suited to your needs. Contact one of our seasoned business development specialists today for more information on our open opportunities.
     </div>
   </div>
   <div class="jobs">
