--- a/app/assets/stylesheets/global/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/global/foundation_and_overrides.scss
@@ -1401,7 +1401,7 @@ $xlarge-breakpoint: 192em;
 // $include-html-top-bar-classes: $include-html-classes;
 
 // Background color for the top bar
-$topbar-bg-color: $white;
+$topbar-bg-color: $silver;
 $topbar-bg: $topbar-bg-color;
 
 // Height and margin
@@ -1414,7 +1414,7 @@ $topbar-title-font-size: 3rem;
 
 // Set the link colors and styles for top-level nav
 $topbar-link-color: $oil;
-$topbar-link-color-hover: $oil;
+$topbar-link-color-hover: $iron;
 $topbar-link-color-active: $oil;
 $topbar-link-color-active-hover: $oil;
 $topbar-link-weight: lighter;
