--- a/app/views/allstaff/select.html.erb
+++ b/app/views/allstaff/select.html.erb
@@ -38,7 +38,45 @@
   <div class="jobs">
     <h2>Featured Jobs</h2>
     <ul class="board">
-
+      <li>
+        <%= link_to "" do %>
+          <h3>Accountant/Bookkeeping Para-professional</h3>
+        <% end %>
+        <div class="description">
+          <div class="time">
+            Full-Time/Part-Time<br>Up to $40k
+          </div>
+          <div class="info">
+            Rosemont<br>1 Day Ago
+          </div>
+        </div>
+      </li>
+      <li>
+        <%= link_to "" do %>
+          <h3>Field Engineer</h3>
+        <% end %>
+        <div class="description">
+          <div class="time">
+            Full-Time<br>$60k
+          </div>
+          <div class="info">
+            Elk Grove Village<br>1 Day Ago
+          </div>
+        </div>
+      </li>
+      <li>
+        <%= link_to "" do %>
+          <h3>Data Entry Clerk</h3>
+        <% end %>
+        <div class="description">
+          <div class="time">
+            Full-Time<br>$14/hr
+          </div>
+          <div class="info">
+            Bensenville<br>1 Day Ago
+          </div>
+        </div>
+      </li>
     </ul>
   </div>
 </main>
