--- a/app/assets/stylesheets/allstaff/pages/_select.scss
+++ b/app/assets/stylesheets/allstaff/pages/_select.scss
@@ -26,10 +26,11 @@
       font-weight: lighter;
       height: 90%;
       overflow-y: auto;
-      padding: 10rem;
+      padding: 5rem;
       position: relative;
       width: 100%;
       vertical-align: bottom;
+      h3 {text-align: center;}
       h3, h4 {
         font-weight: 300;
         font-size: 2rem;
@@ -46,8 +47,33 @@
       box-shadow: inset 0 0 10px $iron;
       height: 60%;
       margin: 0;
+      overflow-y: auto;
       position: relative;
       width: 100%;
+      li {
+        border-bottom: 1px solid $iron;
+        font-weight: lighter;
+        padding: 2rem;
+        h3 {
+          color: #2F5EA7;
+          font-size: 2.5rem;
+          font-weight: lighter;
+          margin-bottom: 1rem;
+          text-align: center;
+          &:hover { color: $iron; }
+        }
+        .description {
+          font-size: 1.5rem;
+          @include grid-row();
+          .time {
+            @include grid-column(6);
+          }
+          .info {
+            @include grid-column(6);
+            text-align: right;
+          }
+        }
+      }
     }
   }
 }
