Add call to action and buttons

--- a/app/assets/stylesheets/allstaff/pages/_select.scss
+++ b/app/assets/stylesheets/allstaff/pages/_select.scss
@@ -75,5 +75,16 @@
         }
       }
     }
+    .action {
+      font-size: 2rem;
+      margin-top: 2rem;
+      text-align: center;
+    }
+    button {
+      background-color: #2F5EA7;
+      display: block;
+      font-size: 2rem;
+      margin: 0 auto;
+    }
   }
 }
