--- a/app/views/allstaff/select.html.erb
+++ b/app/views/allstaff/select.html.erb
@@ -78,6 +78,9 @@
         </div>
       </li>
     </ul>
+
+    <p class="action">Want to stay up to date with the latest job offerings?</p>
+    <button>Join Now!</button>
   </div>
 </main>
 
